# virt-detect

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: core.rs  encoding.rs  lib.rs  machine_id.rs  windows_feature.rs
tests/: index.spec.ts
