[package]
name = "vt"
version = "0.1.0"
edition = "2024"

[lib]
name = "virtualization_checker"
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.172"

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2.172"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Threading"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
strip = "symbols"
lto = true
opt-level = "z"
panic = "abort"